<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/top_title_strues"
    android:orientation="vertical" >

    <include layout="@layout/activity_title_toolbar" />

    <com.roch.fupin.view.ExpandTabView
        android:id="@+id/expandtab_view"
        android:layout_width="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:layout_height="@dimen/layout_45" />

    <include layout="@layout/layout_view_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@color/black"
        android:minHeight="@dimen/layout_30"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/margin_0.5"
            android:layout_marginRight="@dimen/margin_0.5"
            android:layout_marginTop="@dimen/margin_0.5"
            android:layout_weight="2"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/xingzhengqu"
            android:textColor="@color/black" />

        <com.roch.fupin.view.CaseXueTableScrollView
            android:id="@+id/item_scroll_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/margin_0.5"
            android:layout_weight="1"
            android:background="@color/white"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="horizontal" >

                <TextView
                    style="@style/yx_textview_style"
                    android:text="@string/hs" />

                <TextView
                    style="@style/yx_textview_style"
                    android:text="@string/rs" />

                <TextView
                    style="@style/yx_textview_style"
                    android:text="旗县内" />

                <TextView
                    style="@style/yx_textview_style"
                    android:text="旗县外(市内)" />

                <TextView
                    style="@style/yx_textview_style"
                    android:text="市外(省内)" />

                <TextView
                    style="@style/yx_textview_style"
                    android:text="省外" />

                <TextView
                    style="@style/yx_textview_style"
                    android:text="@string/yey" />

                <TextView
                    style="@style/yx_textview_style"
                    android:text="@string/xxs" />

                <TextView
                    style="@style/yx_textview_style"
                    android:text="@string/czs" />

                <TextView
                    style="@style/yx_textview_style"
                    android:text="@string/gzs" />

                <TextView
                    style="@style/yx_textview_style"
                    android:text="@string/zz" />

                <TextView
                    style="@style/yx_textview_style"
                    android:layout_marginRight="@dimen/margin_0.5"
                    android:text="@string/dxs" />
            </LinearLayout>
        </com.roch.fupin.view.CaseXueTableScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:background="@color/black"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/hlistview_scroll_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_0.5"
            android:background="@color/white"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@color/black"
            android:dividerHeight="@dimen/layout_0.5"
            android:fadingEdge="none"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

</LinearLayout>