<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/top_title_strues"
    android:orientation="vertical" >

    <include layout="@layout/activity_title_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10" >

        <TextView
            android:id="@id/tv_time"
            style="@style/text_style"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_16" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:background="@color/black"
        android:minHeight="@dimen/layout_30"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/margin_0.5"
            android:layout_marginRight="@dimen/margin_0.5"
            android:layout_marginTop="@dimen/margin_0.5"
            android:layout_weight="2"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/quyu"
            android:textColor="@color/black" />

        <com.roch.fupin.view.MinZhengJuTableScrollView
            android:id="@+id/item_scroll_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/margin_0.5"
            android:layout_weight="1"
            android:background="@color/white"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/db_hushu"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/db_renshu"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/db_jine"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/wb_hushu"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/wb_renshu"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/wb_jine"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/dd_hushu"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/dd_renshu"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="100dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/margin_0.5"
                    android:layout_marginRight="@dimen/margin_0.5"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/dd_jine"
                    android:textColor="@color/black" />
            </LinearLayout>
        </com.roch.fupin.view.MinZhengJuTableScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:background="@color/black"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/hlistview_scroll_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/margin_0.5"
            android:background="@color/white"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@color/black"
            android:dividerHeight="@dimen/layout_0.5"
            android:fadingEdge="none"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

</LinearLayout>