<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/top_title_strues"
    android:orientation="vertical" >

    <include layout="@layout/activity_title_toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10" >

        <TextView
            android:id="@id/tv_time"
            style="@style/text_style"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize_16" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:background="@color/black"
        android:minHeight="@dimen/layout_50"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/margin_0.5"
            android:layout_marginRight="@dimen/margin_0.5"
            android:layout_marginTop="@dimen/margin_0.5"
            android:layout_weight="2"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/quyu"
            android:textColor="@color/black" />

        <com.roch.fupin.view.JiaoTiJuTableScrollView
            android:id="@+id/item_scroll_title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/margin_0.5"
            android:layout_weight="1"
            android:background="@color/white"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_0.5"
                    android:background="@color/black"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/jt_rs"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="@dimen/margin_0.5"
                        android:layout_weight="1"
                        android:background="@color/black"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="@dimen/layout_150"
                            android:layout_height="fill_parent"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_xqjyrs"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="@dimen/layout_150"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_0.5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_gzrs"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="@dimen/layout_150"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_0.5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_gxrs"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="@dimen/layout_150"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_0.5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_yjcrs"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="@dimen/layout_150"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_0.5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_yjxrs"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="@dimen/layout_150"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_0.5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_zzrs"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/black"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginLeft="@dimen/margin_0.5"
                        android:layout_marginRight="@dimen/margin_0.5"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="@string/jt_je"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginLeft="@dimen/margin_0.5"
                        android:layout_marginTop="@dimen/margin_0.5"
                        android:layout_weight="1"
                        android:background="@color/black"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="@dimen/layout_160"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_xqjyje"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="@dimen/layout_160"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_0.5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_gzje"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="@dimen/layout_160"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_0.5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_gxje"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="@dimen/layout_160"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_0.5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_yjcje"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="@dimen/layout_160"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_0.5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_yjxje"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="@dimen/layout_160"
                            android:layout_height="fill_parent"
                            android:layout_marginLeft="@dimen/margin_0.5"
                            android:layout_marginRight="@dimen/margin_0.5"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="@string/jt_zzje"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.roch.fupin.view.JiaoTiJuTableScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:background="@color/black"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/hlistview_scroll_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/margin_0.5"
            android:background="@color/white"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@color/black"
            android:dividerHeight="@dimen/layout_0.5"
            android:fadingEdge="none"
            android:scrollbars="none" >
        </ListView>
    </LinearLayout>

</LinearLayout>